# hawk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/hawk_viewer/: Cargo.toml
apps/hawk_viewer/src/: main.rs
apps/hawk_web/: .gitignore  index.html  risk-assessment.js  risk-engine.js
crates/hawk_aws/: Cargo.toml
crates/hawk_aws/src/: apigw.rs  arn.rs  ctx.rs  discover.rs  eventbridge.rs  lambda.rs  lib.rs  logs.rs  retry.rs  s3.rs  sfn.rs  sns.rs
crates/hawk_cli/: Cargo.toml
crates/hawk_cli/src/: main.rs
crates/hawk_core/: Cargo.toml
crates/hawk_core/src/: graph.rs  lib.rs  redact.rs  validate.rs
crates/hawk_core/tests/: fixture_tests.rs
crates/hawk_render/: Cargo.toml
crates/hawk_render/src/: lib.rs
crates/hawk_render/tests/: render_fixture_tests.rs
docs/: index.html
examples/: sample_graph.json
