[package]
name = "hawk_viewer"
description = "Interactive 2D Bevy viewer for Hawk infrastructure graphs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hawk_core = { path = "../../crates/hawk_core" }
bevy = "0.15"
bevy_egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
