[package]
name = "hawk_aws"
description = "AWS SDK discovery modules for Lambda, EventBridge, S3, SNS, Logs, Step Functions, and API Gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hawk_core = { path = "../hawk_core" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
aws-sdk-eventbridge = "1"
aws-sdk-s3 = "1"
aws-sdk-sns = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-sfn = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-sqs = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
serde_json = "1"
tracing = "0.1"
futures = "0.3"
anyhow = "1"
