[package]
name = "hawk-cloud"
description = "CLI tool for discovering and mapping cloud serverless infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "hawk"
path = "src/main.rs"

[dependencies]
hawk_core = { path = "../hawk_core", version = "0.1.0" }
hawk_aws = { path = "../hawk_aws", version = "0.1.0" }
hawk_render = { path = "../hawk_render", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
chrono = "0.4"
