[package]
name = "hawk_render"
description = "Mermaid diagram renderer for Hawk infrastructure graphs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hawk_core = { path = "../hawk_core" }
serde_json = "1"
anyhow = "1"
